<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_title">Learning Leaders</string>
    <string name="skills_title">Skill IQ Leaders</string>
    <string name="Submit">submit</string>
    <string name="submission_title">Project Submission</string>
    <string name="sure_text">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="ask">\?</string>
    <string name="email_hint">Email Address</string>
    <string name="git_hint">Project on GITHUB (Link)</string>
    <string name="learning_desc">learning hours,</string>
    <string name="skills_desc">Skill IQ Score,</string>
    <string name="first_name_message">Please Input First Name</string>
    <string name="last_name_message">Please Input Last Name</string>
    <string name="email_message">Please Input Email Address</string>
    <string name="link_message">Please Input Github Project Link</string>
</resources>